lib_LTLIBRARIES = libaegisub-auto3.la
EXTRA_libaegisub_auto3_la_SOURCES = callables.c
AM_CFLAGS = -DAUTO3LIB -Ilua/include

libaegisub_auto3_la_SOURCES = \
	auto3.c \
        lua/src/lapi.c \
        lua/src/lcode.c \
        lua/src/ldebug.c \
        lua/src/ldo.c \
        lua/src/ldump.c \
        lua/src/lfunc.c \
        lua/src/lgc.c \
        lua/src/llex.c \
        lua/src/lmem.c \
        lua/src/lobject.c \
        lua/src/lopcodes.c \
        lua/src/lparser.c \
        lua/src/lstate.c \
        lua/src/lstring.c \
        lua/src/ltable.c \
        lua/src/ltests.c \
        lua/src/ltm.c \
        lua/src/lundump.c \
        lua/src/lvm.c \
        lua/src/lzio.c \
        lua/src/lib/lauxlib.c \
        lua/src/lib/lbaselib.c \
        lua/src/lib/ldblib.c \
        lua/src/lib/liolib.c \
        lua/src/lib/lmathlib.c \
        lua/src/lib/loadlib.c \
        lua/src/lib/lstrlib.c \
        lua/src/lib/ltablib.c

EXTRA_DIST = \
	auto3.sln \
	auto3.vcproj \
	lua/ \
	lua/Makefile \
	lua/COPYRIGHT \
	lua/README
	lua/README.Aegisub \
	lua/UPDATE \
	lua/DIFFS \
	lua/HISTORY \
	lua/lua.vcproj \
	lua/doc/ \
	lua/doc/contents.html \
	lua/doc/manual.html \
	lua/doc/readme.html \
	lua/doc/logo.gif \
	lua/include/ \
	lua/include/lua.h \
	lua/include/lualib.h \
	lua/include/lauxlib.h

